--- a/myriam-gentile---pedagogista-&-consulente v2.1/package.json
+++ b/myriam-gentile---pedagogista-&-consulente v2.1/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "myriam-gentile---pedagogista-&-consulente",
   "private": true,
@@ -7,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "react": "19.0.0",
